# llvm-project

./: .gitlab-ci.yml  CONTRACTS_TODO.txt  change_default_route_ip.py  change_network_config.yml  diagnostic.txt
.github/workflows/: ccpp.yml  ericwf-contracts-nightly.yml  libcxx-basic.yml  libcxx-build-and-test.yaml  llvm-project-tests.yml  repo-dispatch-test.yml  trigger-libcxx-precommits.yml
clang-tools-extra/clang-doc/: Representation.cpp
libcxx/: CMakeLists.txt  foo.txt
libcxx/modules/: CMakeLists.txt  CompileLibcxxModule.cmake  LibcxxModulesConfig.cmake  LibcxxModulesTargets.cmake.in  std.cppm.in
libcxx/modules/std/: contracts.inc
libcxxabi/: CMakeLists.txt
llvm/: .gitignore  CMakeLists.txt
llvm/include/llvm/ADT/: AllocatorList.h  GenericCycleImpl.h  IndexedMap.h  PointerUnion.h  SmallVector.h  StringMap.h
llvm/include/llvm/Analysis/: MemoryProfileInfo.h
llvm/include/llvm/CodeGen/: IndirectThunks.h  MachineFunction.h
llvm/include/llvm/CodeGen/PBQP/: Graph.h
llvm/include/llvm/DebugInfo/CodeView/: AppendingTypeTableBuilder.h  GlobalTypeTableBuilder.h  LazyRandomTypeCollection.h  MergingTypeTableBuilder.h  TypeCollection.h  TypeTableCollection.h
llvm/include/llvm/ExecutionEngine/JITLink/: JITLink.h
llvm/include/llvm/ExecutionEngine/Orc/: LLJIT.h  MachOBuilder.h
llvm/include/llvm/IR/: BasicBlock.h  CFG.h  Metadata.h  PassManager.h
llvm/include/llvm/MC/MCParser/: MCAsmParser.h
llvm/include/llvm/Support/: Error.h  GenericLoopInfoImpl.h  TimeProfiler.h  TrailingObjects.h
llvm/include/llvm/Transforms/Utils/: SSAUpdaterImpl.h
llvm/lib/Analysis/: AssumptionCache.cpp  CGSCCPassManager.cpp  IVDescriptors.cpp  ImportedFunctionsInliningStatistics.cpp  InlineOrder.cpp  LazyCallGraph.cpp  Loads.cpp  MemoryDependenceAnalysis.cpp  MemorySSA.cpp  ScalarEvolution.cpp
llvm/lib/AsmParser/: LLParser.cpp
llvm/lib/Bitcode/Reader/: BitcodeReader.cpp
llvm/lib/Bitcode/Writer/: ValueEnumerator.cpp
llvm/lib/CGData/: OutlinedHashTreeRecord.cpp
llvm/lib/CodeGen/: AssignmentTrackingAnalysis.cpp  BranchFolding.cpp  BranchRelaxation.cpp  CodeGenPrepare.cpp  ExpandVectorPredication.cpp  FixupStatepointCallerSaved.cpp  IndirectBrExpandPass.cpp  InlineSpiller.cpp  LiveDebugVariables.cpp  LiveInterval.cpp  MachineBlockPlacement.cpp  MachineCopyPropagation.cpp  MachineTraceMetrics.cpp  PeepholeOptimizer.cpp  RegAllocGreedy.cpp  RegisterCoalescer.cpp  ScheduleDAGInstrs.cpp  TargetInstrInfo.cpp  TargetSchedule.cpp  TwoAddressInstructionPass.cpp
llvm/lib/CodeGen/AsmPrinter/: CodeViewDebug.cpp  DwarfCompileUnit.cpp  DwarfDebug.cpp  DwarfExpression.cpp
llvm/lib/CodeGen/GlobalISel/: CSEMIRBuilder.cpp  IRTranslator.cpp  InstructionSelect.cpp  LegalizerHelper.cpp  LegalizerInfo.cpp  LoadStoreOpt.cpp  MachineIRBuilder.cpp  RegBankSelect.cpp
llvm/lib/CodeGen/LiveDebugValues/: VarLocBasedImpl.cpp
llvm/lib/CodeGen/SelectionDAG/: DAGCombiner.cpp  LegalizeTypes.cpp  SelectionDAG.cpp  SelectionDAGBuilder.cpp  StatepointLowering.cpp
llvm/lib/DWARFLinker/Parallel/: DependencyTracker.cpp  OutputSections.cpp
llvm/lib/DebugInfo/CodeView/: AppendingTypeTableBuilder.cpp  GlobalTypeTableBuilder.cpp  LazyRandomTypeCollection.cpp  MergingTypeTableBuilder.cpp  TypeTableCollection.cpp
llvm/lib/DebugInfo/PDB/Native/: SymbolCache.cpp
llvm/lib/ExecutionEngine/: ExecutionEngine.cpp
llvm/lib/ExecutionEngine/JITLink/: ELF_aarch32.cpp
llvm/lib/ExecutionEngine/MCJIT/: MCJIT.cpp
llvm/lib/ExecutionEngine/Orc/: COFFPlatform.cpp  Core.cpp  DebugObjectManagerPlugin.cpp  ELFNixPlatform.cpp  ExecutionUtils.cpp  MachOPlatform.cpp
llvm/lib/ExecutionEngine/RuntimeDyld/Targets/: RuntimeDyldMachOAArch64.h
llvm/lib/Frontend/OpenMP/: OMPIRBuilder.cpp
llvm/lib/IR/: BasicBlock.cpp  Constants.cpp  IRBuilder.cpp  LLVMContextImpl.h  Metadata.cpp  Value.cpp
llvm/lib/LTO/: LTO.cpp  LTOCodeGenerator.cpp
llvm/lib/MC/MCParser/: AsmParser.cpp
llvm/lib/Passes/: StandardInstrumentations.cpp
llvm/lib/ProfileData/: SampleProfReader.cpp
llvm/lib/ProfileData/Coverage/: CoverageMapping.cpp  CoverageMappingWriter.cpp
llvm/lib/Support/: OptimizedStructLayout.cpp  TimeProfiler.cpp  VirtualFileSystem.cpp
llvm/lib/Support/Unix/: Signals.inc
llvm/lib/Transforms/IPO/: Attributor.cpp  AttributorAttributes.cpp  DeadArgumentElimination.cpp  ExpandVariadics.cpp  FunctionImport.cpp  GlobalOpt.cpp  IROutliner.cpp  MemProfContextDisambiguation.cpp  MergeFunctions.cpp  SampleContextTracker.cpp  SampleProfileMatcher.cpp  ThinLTOBitcodeWriter.cpp
llvm/lib/Transforms/InstCombine/: InstCombineAddSub.cpp  InstCombineCalls.cpp
llvm/lib/Transforms/Instrumentation/: ControlHeightReduction.cpp  MemorySanitizer.cpp  NumericalStabilitySanitizer.cpp  PGOCtxProfFlattening.cpp  PGOInstrumentation.cpp
llvm/lib/Transforms/ObjCARC/: ObjCARCOpts.cpp
llvm/lib/Transforms/Scalar/: DeadStoreElimination.cpp  GVN.cpp  InductiveRangeCheckElimination.cpp  LICM.cpp  LoopInterchange.cpp  LoopLoadElimination.cpp  LoopStrengthReduce.cpp  LowerMatrixIntrinsics.cpp  MergeICmps.cpp  MergedLoadStoreMotion.cpp  NewGVN.cpp  Reassociate.cpp  RewriteStatepointsForGC.cpp  SimpleLoopUnswitch.cpp  SimplifyCFGPass.cpp
llvm/lib/Transforms/Utils/: CallPromotionUtils.cpp  CloneFunction.cpp  ControlFlowUtils.cpp  FunctionImportUtils.cpp  InlineFunction.cpp  LoopConstrainer.cpp  LoopPeel.cpp  LoopUnroll.cpp  LoopUnrollAndJam.cpp  LoopUtils.cpp  SimplifyCFG.cpp  ValueMapper.cpp
llvm/lib/Transforms/Vectorize/: LoopVectorize.cpp  SLPVectorizer.cpp  VPRecipeBuilder.h  VPlan.cpp  VPlan.h  VPlanAnalysis.cpp  VPlanHCFGBuilder.cpp  VPlanRecipes.cpp  VPlanTransforms.cpp  VPlanUnroll.cpp
llvm/tools/bugpoint/: ListReducer.h
llvm/tools/llvm-exegesis/lib/: Clustering.cpp
llvm/utils/TableGen/: AsmWriterEmitter.cpp  DAGISelMatcherOpt.cpp  GlobalISelCombinerEmitter.cpp  RISCVTargetDefEmitter.cpp  VTEmitter.cpp
llvm/utils/TableGen/Common/: CodeGenDAGPatterns.h
llvm/utils/TableGen/Common/GlobalISel/: GlobalISelMatchTable.cpp  GlobalISelMatchTable.h
llvm/utils/gitlab/: display_environment.sh  stage_llvm_sources.sh
llvm/utils/lit/lit/: worker.py
(+325 files in other folders)
